test/errors/keywords/free_keyword_reserved_fail.hy
int main()
{
    int counter = 7
    free counter
    return counter
}